--- a/src/assets/css/sass/fluxo_caixa/_index.scss
+++ b/src/assets/css/sass/fluxo_caixa/_index.scss
@@ -1,2 +1,12 @@
 @use "./formAddPagMensalidade.scss" ;
 @use "./fluxoCaixaInfoTable.scss" ;
+
+#submenu_fluxo_caixa{
+    #btn_form_saida_caixa{
+        color:red;
+    }
+    #btn_form_entrada_caixa{
+        color:green;
+    }
+
+}
