--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2335,6 +2335,13 @@ option[disabled] {
   color: #247e24;
 }
 
+#submenu_fluxo_caixa #btn_form_saida_caixa {
+  color: red;
+}
+#submenu_fluxo_caixa #btn_form_entrada_caixa {
+  color: green;
+}
+
 @keyframes spinner-line-fade-more {
   0%, 100% {
     opacity: 0;
