Fluxo de caixa saida

--- a/src/assets/css/sass/fluxo_caixa/_index.scss
+++ b/src/assets/css/sass/fluxo_caixa/_index.scss
@@ -1,4 +1,5 @@
 @use "./formAddPagMensalidade.scss" ;
+@use "./formAddSaidaCaixa.scss" ;
 @use "./fluxoCaixaInfoTable.scss" ;
 
 #submenu_fluxo_caixa{
