--- a/src/components/fluxoCaixa/infoTablePagMensal.html
+++ b/src/components/fluxoCaixa/infoTablePagMensal.html
@@ -1,4 +1,5 @@
 <div id='bg_info_table_pag_mensal'>
+    <h3>Entradas de Caixa</h3>
     <menu class='filtro_table' id='filtro_table_pag_mensal'>
         <div>
             <select id='select_ano'>
