--- a/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
+++ b/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
@@ -1,11 +1,13 @@
 
 #bg_info_table_pag_mensal{
+    h3{
+        margin-bottom:20px;
+    }
     table{
         thead{
-         
-         th{
-            background:#4d794d;
-         }  
+            th{
+                background:#4d794d;
+            }  
         }
         tbody{
             tr{
@@ -27,8 +29,6 @@
                     color:#fff;
                 }
             }
-         
-
         }
         .td_linha{
             text-align: center;
