Restruturação fluxo caixa - WIP

--- a/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
+++ b/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
@@ -1,7 +1,12 @@
 
 #bg_info_table_pag_mensal{
     h3{
+        margin-top:20px;
         margin-bottom:20px;
+    }
+
+    .filtro_table{
+        background:#464;
     }
     table{
         thead{
