--- a/src/assets/css/sass/fluxo_caixa/_index.scss
+++ b/src/assets/css/sass/fluxo_caixa/_index.scss
@@ -1,5 +1,7 @@
+@use "./entradas_fluxo_caixa.scss" ;
 @use "./formAddPagMensalidade.scss" ;
 @use "./formAddSaidaCaixa.scss" ;
+@use "./formAddEntradaAvulsa.scss" ;
 @use "./fluxoCaixaInfoTable.scss" ;
 
 #submenu_fluxo_caixa{
