--- a/src/components/fluxoCaixa/formAddEntradaAvulsa.html
+++ b/src/components/fluxoCaixa/formAddEntradaAvulsa.html
@@ -17,14 +17,13 @@
     </div>
 
     <div  class='div_inputs' id='div_tipo_entrada_avulsa'>
-        <label>Tipo de Entrada.</label>
-        <select id='tipo_entrada_avulsa'>
+        <label>Form. Pag</label>
+        <select id='form_pag'>
             <option disabled selected></option>
-            <option value='dinheiro'>Pró-labore</option>
-            <option value='dinheiro'>Contas</option>
-            <option value='débito'>Suplementos</option>
-            <option value='crédito'>Manutenção</option>
-            <option value='pix'>Anúncio</option>
+            <option value='dinheiro'>Dinheiro</option>
+            <option value='débito'>Débito</option>
+            <option value='crédito'>Crédito</option>
+            <option value='pix'>Pix</option>
         </select>
     </div>
     <div  class='div_inputs ' id='div_entrada_avulsa_valor'>
