--- a/src/components/fluxoCaixa/infoTablePagMensal.html
+++ b/src/components/fluxoCaixa/infoTablePagMensal.html
@@ -35,6 +35,26 @@
     <th>Valor</th>
     </thead>
     <tbody id='tbody'>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>R$ 0, 00</td>
     </tbody>
 </table>
+<table class='table_info' border='1'  id='entrada_avulsa_table_info'>
+    <thead> 
+        <th>Data</th>
+        <th>Descrição</th>
+        <th>Form. Pag</th>
+        <th>Valor</th>
+        </thead>
+        <tbody id='tbody'>
+            <td>...</td>
+            <td>...</td>
+            <td>...</td>
+            <td>R$ 0, 00</td>
+        </tbody>
+    </table>
 </div>
