restruturacao_fluxo_caixa

--- a/src/components/fluxoCaixa/infoTablePagMensal.html
+++ b/src/components/fluxoCaixa/infoTablePagMensal.html
@@ -25,7 +25,10 @@
         </select>
         </div>
     </menu>
+    <div id='bg_tables'>
+
 <table class='table_info' border='1'  id='pag_mensal_table_info'>
+    <caption>Pagamentos de Mensalidade</caption>
 <thead> 
     <th>Data</th>
     <th>Aluno</th>
@@ -44,6 +47,8 @@
     </tbody>
 </table>
 <table class='table_info' border='1'  id='entrada_avulsa_table_info'>
+    <caption>Entradas Avulso</caption>
+
     <thead> 
         <th>Data</th>
         <th>Descrição</th>
@@ -57,4 +62,6 @@
             <td>R$ 0, 00</td>
         </tbody>
     </table>
+</div><!--bg_tables-->
+
 </div>
