--- a/src/assets/css/sass/fluxo_caixa/_entradas_fluxo_caixa.scss
+++ b/src/assets/css/sass/fluxo_caixa/_entradas_fluxo_caixa.scss
@@ -3,6 +3,7 @@
     padding:20px;
     background: #fff;
     #sub_menu_entradas{
+        background: #464;
         border:1px solid #333;
         ul{
         display: flex;
