--- a/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
+++ b/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
@@ -6,9 +6,24 @@
     }
 
     .filtro_table{
-        background:#464;
+        background: #fff;
+        border:1px solid #333;
+        border-radius: 3px 3px 0px 0px;
+        border-bottom:0px;
+    }
+     
+    #bg_tables{
+        border:1px solid #444; 
+        padding:10px;
     }
     table{
+        caption{
+            padding:8px;
+            background:#ccc;
+            color:#333;
+            font-size:14px;
+            text-align: right;
+        }
         thead{
             th{
                 background:#4d794d;
