--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2198,6 +2198,7 @@ option[disabled] {
   background: #fff;
 }
 #bg_entradas_fluxo_caixa #sub_menu_entradas {
+  background: #464;
   border: 1px solid #333;
 }
 #bg_entradas_fluxo_caixa #sub_menu_entradas ul {
@@ -2516,7 +2517,21 @@ option[disabled] {
   margin-bottom: 20px;
 }
 #bg_info_table_pag_mensal .filtro_table {
-  background: #464;
+  background: #fff;
+  border: 1px solid #333;
+  border-radius: 3px 3px 0px 0px;
+  border-bottom: 0px;
+}
+#bg_info_table_pag_mensal #bg_tables {
+  border: 1px solid #444;
+  padding: 10px;
+}
+#bg_info_table_pag_mensal table caption {
+  padding: 8px;
+  background: #ccc;
+  color: #333;
+  font-size: 14px;
+  text-align: right;
 }
 #bg_info_table_pag_mensal table thead th {
   background: #4d794d;
