restruturacao_fluxo_caixa

--- a/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
+++ b/src/assets/css/sass/fluxo_caixa/_fluxoCaixaInfoTable.scss
@@ -19,20 +19,23 @@
     table{
         caption{
             padding:8px;
-            background:#ccc;
-            color:#333;
+            background:#4d794d;
+            color:#f0f0f0;
             font-size:14px;
-            text-align: right;
         }
         thead{
             th{
-                background:#4d794d;
+                height:40px;
+                background:#ccc;
+                color:#333;
             }  
         }
         tbody{
             tr{
+                background:#f0f0f0;
+
                 &:nth-child(even){
-                    background:#dfdfdf;
+                    background:#e6e6e6;
                 }
                 &:hover{
                     background: #f6f6e0;
@@ -43,6 +46,8 @@
             }
             tr#tr_resumo{
                 background:#ccc;
+                height:40px;
+                
                 #td_res_valor_total{
                     text-align: center;
                     background:#464; 
