--- a/src/assets/css/sass/abstracts/_menus.scss
+++ b/src/assets/css/sass/abstracts/_menus.scss
@@ -1,11 +1,12 @@
-  
+  @use "variables" as *;
   @use "buttons";
+
   menu.submenu_page{
-    padding: 5px 5px; background:#ddd;
+    background: #ccc;
     border-radius: 3px 3px 0px 0px;
     margin-bottom:20px;
     width:100%;
-    border-bottom:1px solid #333;
+border-bottom:1px solid #333;
     display: flex;
   
     ul{
