--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -581,8 +581,7 @@ inputs, .input-primary {
 }
 
 menu.submenu_page {
-  padding: 5px 5px;
-  background: #ddd;
+  background: #ccc;
   border-radius: 3px 3px 0px 0px;
   margin-bottom: 20px;
   width: 100%;
@@ -2198,8 +2197,7 @@ option[disabled] {
   background: #fff;
 }
 #bg_entradas_fluxo_caixa #sub_menu_entradas {
-  background: #464;
-  border: 1px solid #333;
+  border-bottom: 1px solid #333;
 }
 #bg_entradas_fluxo_caixa #sub_menu_entradas ul {
   display: flex;
@@ -2209,6 +2207,9 @@ option[disabled] {
 }
 #bg_entradas_fluxo_caixa #sub_menu_entradas ul li a {
   text-decoration: none;
+}
+#bg_entradas_fluxo_caixa #sub_menu_entradas ul li a:focus {
+  outline: 0px;
 }
 
 #form_add_pag_mensalidade {
@@ -2314,8 +2315,8 @@ option[disabled] {
   box-shadow: 0px 0px 0px 0px #666;
 }
 #form_add_pag_mensalidade fieldset .div_submit input[type=submit] {
-  min-width: 30%;
-  max-width: 300px;
+  background: #464;
+  max-width: 180px;
 }
 
 #form_add_saida_caixa {
