--- a/src/components/fluxoCaixa/formAddEntradaAvulsa.html
+++ b/src/components/fluxoCaixa/formAddEntradaAvulsa.html
@@ -1,10 +1,5 @@
-<form id='form_add_entrada_avulsa' >
-    <h3>
-        + <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
-            <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
-            <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
-          </svg> 
-        Entrada Avulsa</h3>
+<form class='forms_fluxo_caixa' id='form_add_entrada_avulsa' >
+    <h4>+ Entrada Avulsa</h4>
 <fieldset>
 <div class='row'>
     <div class='div_inputs' id='div_data'>
