--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -1,10 +1,5 @@
-<form id='form_add_pag_mensalidade' >
-    <h3>
-        + <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
-            <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
-            <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
-          </svg> 
-        Entrada de Caixa</h3>
+<form class='forms_fluxo_caixa' id='form_add_pag_mensalidade' >
+    <h4>+ Pagamento de Mensalidade</h4>
 <fieldset>
    <!--Hidden Inputs-->
    <input  type='hidden' id='ra'/>
