--- a/src/components/fluxoCaixa/formAddSaidaAvulsa.html
+++ b/src/components/fluxoCaixa/formAddSaidaAvulsa.html
@@ -1,4 +1,4 @@
-<form id='form_add_saida_caixa' >
+<form class='forms_fluxo_caixa' id='form_add_saida_avulsa' >
     <h3>
         - <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
             <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
