--- a/src/components/fluxoCaixa/saidasInfoTable.html
+++ b/src/components/fluxoCaixa/saidasInfoTable.html
@@ -1,6 +1,5 @@
-<div id='bg_info_table_pag_mensal'>
-    <h3>Entradas de Caixa</h3>
-    <menu class='filtro_table' id='filtro_table_pag_mensal'>
+<div  class='bg_info_tables' id='bg_saidas_info_table'>
+    <menu class='filtro_table' id='filtro_table_saida'>
         <div>
             <select id='select_ano'>
             <option value='2019'>2019</option>
@@ -27,32 +26,12 @@
     </menu>
     <div id='bg_tables'>
 
-<table class='table_info' border='1'  id='pag_mensal_table_info'>
-    <caption>Pagamentos de Mensalidade</caption>
-<thead> 
-    <th>Data</th>
-    <th>Aluno</th>
-    <th>Curso</th>
-    <th>Parcela</th>
-    <th>Form. Pag</th>
-    <th>Valor</th>
-    </thead>
-    <tbody id='tbody'>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-        <td>R$ 0, 00</td>
-    </tbody>
-</table>
-<table class='table_info' border='1'  id='entrada_avulsa_table_info'>
-    <caption>Entradas Avulso</caption>
-
+<table class='table_info' border='1'  id='saida_avulsa_table_info'>
+    <caption>Saidas de Caixa</caption>
     <thead> 
         <th>Data</th>
         <th>Descrição</th>
-        <th>Form. Pag</th>
+        <th>Tipo de Saída</th>
         <th>Valor</th>
         </thead>
         <tbody id='tbody'>
