Fluxo de caixa Adicionado

--- a/src/assets/css/sass/fluxo_caixa/_infoTables.scss
+++ b/src/assets/css/sass/fluxo_caixa/_infoTables.scss
@@ -49,11 +49,15 @@
     caption{
         background:#bd4343;
     }
-    tr#td_res_valor_total{
-        text-align: center; 
-        background: #bd4343;
-        color:#fff;
+    tr#tr_resumo{
+        #td_res_valor_total{
+            text-align: center; 
+            background: #bd4343;
+            color:#fff;
+        }
     }
+  
+  
 }
 #bg_entradas_info_table{
         caption{
