Ajustes resumo fluxo caixa

--- a/src/assets/css/sass/fluxo_caixa/_formAddEntradaAvulsa.scss
+++ b/src/assets/css/sass/fluxo_caixa/_formAddEntradaAvulsa.scss
@@ -20,6 +20,9 @@ $verde-claro: "#d3ddd3";
         #div_tipo_saida {
             max-width: 150px !important;
         }
+        #entrada_avulsa_valor{
+            color:green;
+        }
         .div_submit {
             input[type='submit'] {
                 background: #396635;
