--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2282,6 +2282,9 @@ option[disabled] {
 #form_add_entrada_avulsa fieldset #div_tipo_saida {
   max-width: 150px !important;
 }
+#form_add_entrada_avulsa fieldset #entrada_avulsa_valor {
+  color: green;
+}
 #form_add_entrada_avulsa fieldset .div_submit input[type=submit] {
   background: #396635;
 }
