--- a/src/components/fluxoCaixa/formAddSaidaAvulsa.html
+++ b/src/components/fluxoCaixa/formAddSaidaAvulsa.html
@@ -4,16 +4,16 @@
 <div class='row'>
     <div class='div_inputs' id='div_data'>
         <label>Data: </label>
-        <input  type='Date' id='data'/>
+        <input  required  type='Date' id='data'/>
     </div>
     <div  class='div_inputs' div='div_descricao'>
         <label>Descrição: </label>
-        <textarea id='descricao' ></textarea>
+        <textarea  required  id='descricao' ></textarea>
     </div>
 
     <div  class='div_inputs' id='div_tipo_saida'>
         <label>Tipo de Saída.</label>
-        <select id='tipo_saida'>
+        <select required id='tipo_saida'>
             <option disabled selected></option>
             <option value='dinheiro'>Pró-labore</option>
             <option value='dinheiro'>Contas</option>
@@ -24,7 +24,7 @@
     </div>
     <div  class='div_inputs ' id='div_saida_valor'>
         <label>Valor: </label>
-        <input  type='text' id='saida_valor'  value='0,00'/>
+        <input required  type='text' id='saida_valor'  value=''/>
     </div>
     </div><!--row-->
 <div class='row'>
