--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2376,6 +2376,9 @@ option[disabled] {
 #submenu_fluxo_caixa #btn_form_entrada_caixa {
   color: green;
 }
+#submenu_fluxo_caixa a:focus {
+  outline: 0px;
+}
 
 form.forms_fluxo_caixa {
   margin: 0 auto;
