Refatoração de funções fluxo_caixa

--- a/src/assets/css/sass/fluxo_caixa/_index.scss
+++ b/src/assets/css/sass/fluxo_caixa/_index.scss
@@ -18,7 +18,7 @@
     #btn_form_saida_caixa{
         color:red;
     }
-    #btn_form_entrada_caixa{
+    #btn_entradas_caixa{
         color:green;
     }
 a{
