--- a/src/components/fluxoCaixa/resumoFluxoCaixa.html
+++ b/src/components/fluxoCaixa/resumoFluxoCaixa.html
@@ -1,4 +1,5 @@
 <div class='bg_info_resumo' id='bg_info_resumo_fluxo_caixa'>
+    <h3>Resumo Fluxo Caixa</h3>
     <menu class='filtro_resumo' id='filtro_resumo_fluxo_caixa'>
         <div>
             <select id='select_ano'>
