--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2373,7 +2373,7 @@ option[disabled] {
 #submenu_fluxo_caixa #btn_form_saida_caixa {
   color: red;
 }
-#submenu_fluxo_caixa #btn_form_entrada_caixa {
+#submenu_fluxo_caixa #btn_entradas_caixa {
   color: green;
 }
 #submenu_fluxo_caixa a:focus {
