--- a/src/assets/css/sass/fluxo_caixa/_index.scss
+++ b/src/assets/css/sass/fluxo_caixa/_index.scss
@@ -3,6 +3,7 @@
 @use "./formAddSaidaAvulsa.scss" ;
 @use "./formAddEntradaAvulsa.scss" ;
 @use "./infoTables.scss" ;
+@use "./resumoFluxoCaixa.scss" ;
 @use "../abstracts/" as *;
 
 
@@ -25,7 +26,7 @@ a{
     &:focus{
         outline:0px;
     }
-}
+} 
 }
 
 form.forms_fluxo_caixa{
