--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2366,6 +2366,117 @@ option[disabled] {
   margin-top: 40px;
 }
 
+.bg_info_resumo h3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.bg_info_resumo .filtro_resumo {
+  background: #fff;
+  border: 1px solid #333;
+  border-radius: 3px 3px 0px 0px;
+  border-bottom: 0px;
+  display: flex;
+  padding: 5px;
+  background: #ccc;
+}
+.bg_info_resumo .filtro_resumo select {
+  font-size: 16px;
+  padding: 5px 10px;
+  font-weight: bolder;
+  color: #555;
+}
+.bg_info_resumo #bg_tables {
+  border: 1px solid #444;
+  padding: 10px;
+}
+.bg_info_resumo table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #333;
+}
+.bg_info_resumo table caption {
+  padding: 8px;
+  background: #333;
+  color: #f0f0f0;
+  font-size: 14px;
+}
+.bg_info_resumo table thead th {
+  font-weight: normal;
+  height: 40px;
+  background: #333;
+  color: #fff;
+  border: 1px solid #666;
+  font-size: 14px;
+}
+.bg_info_resumo table tbody tr {
+  background: #f0f0f0;
+}
+.bg_info_resumo table tbody tr:nth-child(even) {
+  background: #e6e6e6;
+}
+.bg_info_resumo table tbody tr:hover {
+  background: #f6f6e0;
+}
+.bg_info_resumo table tbody tr td {
+  border: 1px solid #333;
+  padding: 10px 5px;
+}
+.bg_info_resumo .td_num_pag_mensalidade {
+  text-align: center;
+}
+.bg_info_resumo .td_pag_mensalidade {
+  color: green;
+  text-align: center;
+}
+.bg_info_resumo .td_entradas_avulso {
+  color: green;
+  text-align: center;
+}
+.bg_info_resumo .td_saidas_avulso {
+  text-align: center;
+  color: #bd4343;
+}
+.bg_info_resumo .td_total {
+  color: green;
+  text-align: center;
+}
+
+#bg_saidas_info_table caption {
+  background: #bd4343;
+}
+#bg_saidas_info_table tr#tr_resumo #td_res_valor_total {
+  text-align: center;
+  background: #bd4343;
+  color: #fff;
+}
+
+#bg_entradas_info_table caption {
+  background: #4d794d;
+}
+#bg_entradas_info_table tr#tr_resumo #td_res_valor_total {
+  text-align: center;
+  background: #464;
+  color: #fff;
+}
+#bg_entradas_info_table .td_linha {
+  text-align: center;
+  background: #ccc;
+  color: #666;
+}
+#bg_entradas_info_table .td_data {
+  text-align: center;
+}
+#bg_entradas_info_table .td_parcela {
+  text-align: center;
+}
+#bg_entradas_info_table .td_valor_total {
+  color: #247e24;
+}
+
+#entrada_avulsa_table_info {
+  margin-top: 40px;
+}
+
 #fluxo_caixa_content {
   padding: 20px;
   background: #fff;
