--- a/src/components/fluxoCaixa/resumoFluxoCaixa.html
+++ b/src/components/fluxoCaixa/resumoFluxoCaixa.html
@@ -8,25 +8,34 @@
                 <option selected value='2021'>2021</option>
              </select>
         </div>
-        <div>
-        <select id='select_mes'>
-            <option value='janeiro'>Janeiro</option>
-            <option value='fevereiro'>Fevereiro</option>
-            <option value='março'>Março</option>
-            <option value='abril'>Abril</option>
-            <option value='maio'>Maio</option>
-            <option value='junho'>Junho</option>
-            <option value='julho'>Julho</option>
-            <option value='agosto'>Agosto</option>
-            <option value='setembro'>Setembro</option>
-            <option value='outubro'>Outubro</option>
-            <option value='novembro'>Novembro</option>
-            <option value='dezembro'>Dezembro</option>
-        </select>
-        </div>
+     
     </menu>
+   
     <div id='resumo_content'>
-
+        <table id='table_resumo_fluxo_caixa'>
+            <thead>
+                <th>Mês</th>
+                <th>Num. Pag.</th>
+                <th>Pag. Mensalidades</th>
+                <th>Entradas Avulso</th>
+                <th>Saídas Avulso</th>
+                <th>Total</th>
+            </thead>
+            <tbody>
+<tr id='res_dezembro'> <td class='td_mes'>Dezembro</td>  <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_novembro'> <td class='td_mes'>Novembro</td>  <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_outubro'>  <td class='td_mes'>Outubro</td>   <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_setembro'> <td class='td_mes'>Setembro</td>  <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_agosto'>   <td class='td_mes'>Agosto</td>    <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_julho'>    <td class='td_mes'>Julho</td>     <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_junho'>    <td class='td_mes'>Junho</td>     <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_maio'>     <td class='td_mes'>Maio</td>      <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_abril'>    <td class='td_mes'>Abril</td>     <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_março'>    <td class='td_mes'>Março</td>     <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_fevereiro'><td class='td_mes'>Fevereiro</td> <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+<tr id='res_janeiro'>  <td class='td_mes'>Janeiro</td>   <td class='td_num_pag_mensalidade'></td><td class='td_pag_mensalidade'></td><td class='td_entradas_avulso'></td><td class='td_saidas_avulso'></td> <td class='td_total'></td></tr>
+    </tbody>
+    </table>
 </div><!--resumo_content-->
 
 </div>
