WIP - Edit Alunos

--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -56,8 +56,7 @@
 }
 
 *:focus{
-  outline: 2px solid lighten($primary-color, 20%);
-  outline-offset: -2px;
+  outline-color: lighten($primary-color, 20%);
 
 }
 
