WIP - Edit Alunos

--- a/src/components/alunos/formAddCurso.html
+++ b/src/components/alunos/formAddCurso.html
@@ -7,8 +7,8 @@
     </svg> Aluno Add Curso</h3>
     <div>
       <label for="nome">Aluno:</label>
-      <select required id='select_aluno'></select>
-      
+      <input readonly type='text' id='aluno_ra'>
+      <input readonly type='text' id='aluno_nome'>
     </div>
     <div>
       <label><span class='required'>&nbsp;&nbsp;*</span> Curso:</label> 
