--- a/src/assets/css/sass/alunos/_index.scss
+++ b/src/assets/css/sass/alunos/_index.scss
@@ -1,5 +1,6 @@
 @use "../abstracts/" as *;
 @use "./form_add_aluno";
 @use "./form_add_curso";
+@use "./info_aluno";
 @use "./id_aluno";
 @use "./info_table_alunos";
