--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -188,3 +188,85 @@ inputs{
 
 }
 
+.form_flex_static{
+  @extend .forms;
+  position: static;
+  display:flex;
+  flex-wrap: wrap;
+  border-radius: $border-radius;
+  border-color: $border-color-medium;
+
+ max-width: 800px;
+ margin: 20px auto;
+ padding:$padding-large;
+ height: auto;
+ background:#fff;
+ transition: all 2s;
+ z-index: 7;
+ fieldset{
+   border:$border-set-default;
+  display: flex;
+  flex-wrap: wrap;
+  margin:0px ;
+  max-width: 100% ;
+  flex-grow: 1;
+
+ }
+ h3{
+   text-transform: uppercase;
+   flex-basis:100%;
+   text-align: center;
+   margin-bottom:30px;
+   margin-top:-5px;
+   svg{margin-bottom:-5px; margin-right:2px; height:25px;  width:auto;}
+ }
+  div{
+    display:flex;
+    padding: $padding-extra-light;
+    flex-grow: 1;
+    max-width: 100%;
+   min-height: 45px;
+   padding:5px 0px;
+   margin-top:5px;
+   justify-content: center;
+
+    label{
+      display:flex;
+      align-items: center;
+      min-width:85px;
+      background:#f0f0f0;
+      padding:5px 10px;
+    }
+
+    input, textarea{
+      width:auto;
+      max-width: 500px;
+      min-width: 100px;
+      flex-shrink: 1;
+      flex-grow:1;
+      display:block;
+      border: $border-set-default;
+       padding: $padding-extra-light;
+       color: $text-color; 
+    }
+  }
+  select {
+   display: block;
+   flex-grow: 1;
+ }
+
+ .div_submit{
+   width:100%;
+ }
+  input[type=submit]{
+      @extend .btn-primary;
+      display: block;
+      clear:both;
+      max-width:300px;
+      min-width: 50%;
+      min-height: 45px;
+      margin: auto ;
+      margin-top:40px
+ }
+
+}
