--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn, #fieldset_resp div #btn_marcar_resp_aluno, .btn-secondary, .btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_add_curso input[type=submit], .btn-default-delete, #form_add_saida_avulsa fieldset .div_submit input[type=submit], #aluno_content .bg_info_delete_curso .btn_deletar_curso, .btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #aluno_content .btn_add, menu.submenu_page ul li a {
+.btn, #fieldset_resp div #btn_marcar_resp_aluno, .btn-secondary, .btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_info_aluno input[type=submit], #form_add_curso input[type=submit], .btn-default-delete, #form_add_saida_avulsa fieldset .div_submit input[type=submit], #aluno_content .bg_info_delete_curso .btn_deletar_curso, .btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #aluno_content .btn_add, menu.submenu_page ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -359,7 +359,7 @@ template {
   border: 0px;
   cursor: pointer;
 }
-.btn svg, #fieldset_resp div #btn_marcar_resp_aluno svg, .btn-secondary svg, .btn-primary svg, .forms_fixed input[type=submit] svg, #form_add_aluno input[type=submit] svg, #aluno_content .btn_add_curso svg, .form_flex input[type=submit] svg, .form_flex_absolute input[type=submit] svg, #form_config_perm input[type=submit] svg, #form_reauth_user input[type=submit] svg, #form_add_user input[type=submit] svg, .forms_controle_aula input[type=submit] svg, #form_add_curso input[type=submit] svg, .btn-default-delete svg, #form_add_saida_avulsa fieldset .div_submit input[type=submit] svg, #aluno_content .bg_info_delete_curso .btn_deletar_curso svg, .btn-default svg, form.forms_fluxo_caixa .div_submit input[type=submit] svg, .sub_menu_fluxo_caixa ul li a svg, .nav_forms ul li a svg, #page_login #login_content #form_login input[type=submit] svg, .forms_fixed .label_btn_checkbox svg, #form_add_aluno .label_btn_checkbox svg, #bg_div_id_contrato #label_id_automatico_contrato svg, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo svg, #aluno_content .btn_add svg, menu.submenu_page ul li a svg {
+.btn svg, #fieldset_resp div #btn_marcar_resp_aluno svg, .btn-secondary svg, .btn-primary svg, .forms_fixed input[type=submit] svg, #form_add_aluno input[type=submit] svg, #aluno_content .btn_add_curso svg, .form_flex input[type=submit] svg, .form_flex_absolute input[type=submit] svg, .form_flex_static input[type=submit] svg, #form_config_perm input[type=submit] svg, #form_reauth_user input[type=submit] svg, #form_add_user input[type=submit] svg, .forms_controle_aula input[type=submit] svg, #form_info_aluno input[type=submit] svg, #form_add_curso input[type=submit] svg, .btn-default-delete svg, #form_add_saida_avulsa fieldset .div_submit input[type=submit] svg, #aluno_content .bg_info_delete_curso .btn_deletar_curso svg, .btn-default svg, form.forms_fluxo_caixa .div_submit input[type=submit] svg, .sub_menu_fluxo_caixa ul li a svg, .nav_forms ul li a svg, #page_login #login_content #form_login input[type=submit] svg, .forms_fixed .label_btn_checkbox svg, #form_add_aluno .label_btn_checkbox svg, #bg_div_id_contrato #label_id_automatico_contrato svg, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo svg, #aluno_content .btn_add svg, menu.submenu_page ul li a svg {
   max-width: 100px;
   max-height: 100px;
   height: auto;
@@ -395,14 +395,14 @@ template {
   background: #fc4646;
 }
 
-.btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_add_curso input[type=submit] {
+.btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #aluno_content .btn_add_curso, .form_flex input[type=submit], .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], .forms_controle_aula input[type=submit], #form_info_aluno input[type=submit], #form_add_curso input[type=submit] {
   background: #245da7;
   color: #fafafa;
 }
-.btn-primary:hover, .forms_fixed input[type=submit]:hover, #form_add_aluno input[type=submit]:hover, #aluno_content .btn_add_curso:hover, .form_flex input[type=submit]:hover, .form_flex_absolute input[type=submit]:hover, #form_config_perm input[type=submit]:hover, #form_reauth_user input[type=submit]:hover, #form_add_user input[type=submit]:hover, .forms_controle_aula input[type=submit]:hover, #form_add_curso input[type=submit]:hover {
+.btn-primary:hover, .forms_fixed input[type=submit]:hover, #form_add_aluno input[type=submit]:hover, #aluno_content .btn_add_curso:hover, .form_flex input[type=submit]:hover, .form_flex_absolute input[type=submit]:hover, .form_flex_static input[type=submit]:hover, #form_config_perm input[type=submit]:hover, #form_reauth_user input[type=submit]:hover, #form_add_user input[type=submit]:hover, .forms_controle_aula input[type=submit]:hover, #form_info_aluno input[type=submit]:hover, #form_add_curso input[type=submit]:hover {
   background: #2969bc;
 }
-.btn-primary:active, .forms_fixed input[type=submit]:active, #form_add_aluno input[type=submit]:active, #aluno_content .btn_add_curso:active, .form_flex input[type=submit]:active, .form_flex_absolute input[type=submit]:active, #form_config_perm input[type=submit]:active, #form_reauth_user input[type=submit]:active, #form_add_user input[type=submit]:active, .forms_controle_aula input[type=submit]:active, #form_add_curso input[type=submit]:active {
+.btn-primary:active, .forms_fixed input[type=submit]:active, #form_add_aluno input[type=submit]:active, #aluno_content .btn_add_curso:active, .form_flex input[type=submit]:active, .form_flex_absolute input[type=submit]:active, .form_flex_static input[type=submit]:active, #form_config_perm input[type=submit]:active, #form_reauth_user input[type=submit]:active, #form_add_user input[type=submit]:active, .forms_controle_aula input[type=submit]:active, #form_info_aluno input[type=submit]:active, #form_add_curso input[type=submit]:active {
   background: #1f5192;
   box-shadow: inset 0px 1px 3px #122e53;
 }
@@ -433,7 +433,7 @@ inputs, .input-primary {
   color: #444;
 }
 
-.forms, .form_flex_absolute, #form_add_curso, .form_flex, #form_config_perm, #form_reauth_user, #form_add_user, .forms_controle_aula {
+.forms, .form_flex_static, #form_info_aluno, .form_flex_absolute, #form_add_curso, .form_flex, #form_config_perm, #form_reauth_user, #form_add_user, .forms_controle_aula {
   border: 1px solid #999;
   position: fixed;
   right: 0px;
@@ -442,18 +442,18 @@ inputs, .input-primary {
   z-index: 5;
   box-shadow: 0px 1px 2px #666;
 }
-.forms .btn_close_form, .form_flex_absolute .btn_close_form, #form_add_curso .btn_close_form, .form_flex .btn_close_form, #form_config_perm .btn_close_form, #form_reauth_user .btn_close_form, #form_add_user .btn_close_form, .forms_controle_aula .btn_close_form {
+.forms .btn_close_form, .form_flex_static .btn_close_form, #form_info_aluno .btn_close_form, .form_flex_absolute .btn_close_form, #form_add_curso .btn_close_form, .form_flex .btn_close_form, #form_config_perm .btn_close_form, #form_reauth_user .btn_close_form, #form_add_user .btn_close_form, .forms_controle_aula .btn_close_form {
   right: 0px;
   top: 0px;
   padding: 5px 10px;
   position: absolute;
   cursor: pointer;
 }
-.forms .btn_close_form:hover, .form_flex_absolute .btn_close_form:hover, #form_add_curso .btn_close_form:hover, .form_flex .btn_close_form:hover, #form_config_perm .btn_close_form:hover, #form_reauth_user .btn_close_form:hover, #form_add_user .btn_close_form:hover, .forms_controle_aula .btn_close_form:hover {
+.forms .btn_close_form:hover, .form_flex_static .btn_close_form:hover, #form_info_aluno .btn_close_form:hover, .form_flex_absolute .btn_close_form:hover, #form_add_curso .btn_close_form:hover, .form_flex .btn_close_form:hover, #form_config_perm .btn_close_form:hover, #form_reauth_user .btn_close_form:hover, #form_add_user .btn_close_form:hover, .forms_controle_aula .btn_close_form:hover {
   background: #dd4f4f;
   color: #fff;
 }
-.forms input:focus, .form_flex_absolute input:focus, #form_add_curso input:focus, .form_flex input:focus, #form_config_perm input:focus, #form_reauth_user input:focus, #form_add_user input:focus, .forms_controle_aula input:focus, .forms textarea:focus, .form_flex_absolute textarea:focus, #form_add_curso textarea:focus, .form_flex textarea:focus, #form_config_perm textarea:focus, #form_reauth_user textarea:focus, #form_add_user textarea:focus, .forms_controle_aula textarea:focus, .forms select:focus, .form_flex_absolute select:focus, #form_add_curso select:focus, .form_flex select:focus, #form_config_perm select:focus, #form_reauth_user select:focus, #form_add_user select:focus, .forms_controle_aula select:focus {
+.forms input:focus, .form_flex_static input:focus, #form_info_aluno input:focus, .form_flex_absolute input:focus, #form_add_curso input:focus, .form_flex input:focus, #form_config_perm input:focus, #form_reauth_user input:focus, #form_add_user input:focus, .forms_controle_aula input:focus, .forms textarea:focus, .form_flex_static textarea:focus, #form_info_aluno textarea:focus, .form_flex_absolute textarea:focus, #form_add_curso textarea:focus, .form_flex textarea:focus, #form_config_perm textarea:focus, #form_reauth_user textarea:focus, #form_add_user textarea:focus, .forms_controle_aula textarea:focus, .forms select:focus, .form_flex_static select:focus, #form_info_aluno select:focus, .form_flex_absolute select:focus, #form_add_curso select:focus, .form_flex select:focus, #form_config_perm select:focus, #form_reauth_user select:focus, #form_add_user select:focus, .forms_controle_aula select:focus {
   outline: 2px solid #5690db;
   outline-offset: -2px;
 }
@@ -601,6 +601,86 @@ inputs, .input-primary {
   width: 100%;
 }
 .form_flex_absolute input[type=submit], #form_add_curso input[type=submit] {
+  display: block;
+  clear: both;
+  max-width: 300px;
+  min-width: 50%;
+  min-height: 45px;
+  margin: auto;
+  margin-top: 40px;
+}
+
+.form_flex_static, #form_info_aluno {
+  position: static;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 3px;
+  border-color: #999;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 40px;
+  height: auto;
+  background: #fff;
+  transition: all 2s;
+  z-index: 7;
+}
+.form_flex_static fieldset, #form_info_aluno fieldset {
+  border: 1px solid #999;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px;
+  max-width: 100%;
+  flex-grow: 1;
+}
+.form_flex_static h3, #form_info_aluno h3 {
+  text-transform: uppercase;
+  flex-basis: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: -5px;
+}
+.form_flex_static h3 svg, #form_info_aluno h3 svg {
+  margin-bottom: -5px;
+  margin-right: 2px;
+  height: 25px;
+  width: auto;
+}
+.form_flex_static div, #form_info_aluno div {
+  display: flex;
+  padding: 5px;
+  flex-grow: 1;
+  max-width: 100%;
+  min-height: 45px;
+  padding: 5px 0px;
+  margin-top: 5px;
+  justify-content: center;
+}
+.form_flex_static div label, #form_info_aluno div label {
+  display: flex;
+  align-items: center;
+  min-width: 85px;
+  background: #f0f0f0;
+  padding: 5px 10px;
+}
+.form_flex_static div input, #form_info_aluno div input, .form_flex_static div textarea, #form_info_aluno div textarea {
+  width: auto;
+  max-width: 500px;
+  min-width: 100px;
+  flex-shrink: 1;
+  flex-grow: 1;
+  display: block;
+  border: 1px solid #999;
+  padding: 5px;
+  color: #444;
+}
+.form_flex_static select, #form_info_aluno select {
+  display: block;
+  flex-grow: 1;
+}
+.form_flex_static .div_submit, #form_info_aluno .div_submit {
+  width: 100%;
+}
+.form_flex_static input[type=submit], #form_info_aluno input[type=submit] {
   display: block;
   clear: both;
   max-width: 300px;
@@ -2118,6 +2198,34 @@ option[disabled] {
 }
 #form_add_curso #div_submit {
   width: 100%;
+}
+
+#alunos_content {
+  background: #ddd;
+  padding: 20px;
+}
+
+#form_info_aluno {
+  background: transparent;
+  padding: 0px;
+  box-shadow: none;
+  border: 0px;
+}
+#form_info_aluno fieldset {
+  background: transparent;
+}
+#form_info_aluno fieldset .div_input {
+  margin: 0px;
+}
+#form_info_aluno fieldset .div_input label {
+  background: #e6e6e6;
+}
+#form_info_aluno fieldset .div_input input[readonly=true] {
+  background: #f0f0f0;
+  border: 0px;
+}
+#form_info_aluno fieldset .div_input input[readonly=true]:focus {
+  outline: 0px;
 }
 
 #div_ra_aluno {
