--- a/src/assets/css/sass/alunos/_info_table_alunos.scss
+++ b/src/assets/css/sass/alunos/_info_table_alunos.scss
@@ -3,12 +3,9 @@
     .td_controles{
      width: 180px;
         height:40px;
-        align-items: center;
         text-align: center;
-            button{ padding:5px; font-size: 12px;
-                display: block;
-                float:none!important;display:inline;
-                cursor: pointer;
+            button{
+
             }
     }
 }
