--- a/src/components/alunos/infoTableAlunos.html
+++ b/src/components/alunos/infoTableAlunos.html
@@ -1,8 +1,8 @@
-<div  class='bg_info_tables' id='bg_info_table_alunos'>
+<div  class='bg_tables bg_info_tables' id='bg_info_table_alunos'>
  
-    <div id='bg_tables'>
+   
         <table class='table_info' border='1'  id='table_info_alunos'>
-         <caption>Saidas de Caixa</caption>
+         <caption>Alunos</caption>
         <thead> 
             <th>RA</th>
             <th>Nome</th>
@@ -16,6 +16,5 @@
                 <td>...</td>
             </tbody>
         </table>
-</div><!--bg_tables-->
 
 </div>
