--- a/src/components/fluxoCaixa/entradasInfoTable.html
+++ b/src/components/fluxoCaixa/entradasInfoTable.html
@@ -24,7 +24,7 @@
         </select>
         </div>
     </menu>
-    <div id='bg_tables'>
+    <div class='bg_info_tables' id='bg_tables'>
 
 <table class='table_info' border='1'  id='pag_mensal_table_info'>
     <caption>Pagamentos de Mensalidade</caption>
