--- a/src/assets/css/sass/users/_index.scss
+++ b/src/assets/css/sass/users/_index.scss
@@ -19,11 +19,11 @@
 
 #users_table_info{
   @extend .table_info;
-  .user_foto {
+  .td_user_foto {
     text-align: center;
-    img{width: 50px; height: 50px; border-radius: 50%; }
+    img{ border-radius: 50%; }
   }
-  .user_level{ text-align: center;
+  .td_user_level{ text-align: center;
   width: 20px;
 
 }
